@@ -1,19 +1,25 @@
 package pretzel.dreamketcherbe.domain.member.service;
 
+import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import pretzel.dreamketcherbe.common.dto.PageReqDto;
+import pretzel.dreamketcherbe.common.dto.PageResDto;
 import pretzel.dreamketcherbe.domain.member.dto.InterestedWebtoonResponse;
+import pretzel.dreamketcherbe.domain.member.dto.InterestedWebtoonSimpleResponse;
 import pretzel.dreamketcherbe.domain.member.dto.NicknameRequest;
 import pretzel.dreamketcherbe.domain.member.dto.SelfInfoResponse;
+import pretzel.dreamketcherbe.domain.member.dto.WorkResDto;
 import pretzel.dreamketcherbe.domain.member.entity.InterestedWebtoon;
 import pretzel.dreamketcherbe.domain.member.entity.Member;
 import pretzel.dreamketcherbe.domain.member.exception.MemberException;
 import pretzel.dreamketcherbe.domain.member.exception.MemberExceptionType;
 import pretzel.dreamketcherbe.domain.member.repository.InterestedWebtoonRepository;
 import pretzel.dreamketcherbe.domain.member.repository.MemberRepository;
-
-import java.util.List;
+import pretzel.dreamketcherbe.domain.webtoon.entity.Webtoon;
+import pretzel.dreamketcherbe.domain.webtoon.repository.WebtoonGenreRepository;
 
 @Service
 @Transactional(readOnly = true)
@@ -22,6 +28,7 @@ public class MemberService {
 
     private final MemberRepository memberRepository;
     private final InterestedWebtoonRepository interestedWebtoonRepository;
+    private final WebtoonGenreRepository webtoonGenreRepository;
 
     public SelfInfoResponse getSelfInfo(Long memberId) {
         Member member = memberRepository.findById(memberId)
@@ -33,7 +40,7 @@ public class MemberService {
     @Transactional
     public Object updateProfile(Long memberId, NicknameRequest nicknameRequest) {
         Member member = memberRepository.findById(memberId)
-                            .orElseThrow(() -> new MemberException(MemberExceptionType.MEMBER_NOT_FOUND));
+            .orElseThrow(() -> new MemberException(MemberExceptionType.MEMBER_NOT_FOUND));
 
         if (memberRepository.existsByNickname(nicknameRequest.nickname())) {
             throw new MemberException(MemberExceptionType.NICKNAME_ALREADY_EXISTS);
@@ -44,15 +51,40 @@ public class MemberService {
         return memberRepository.save(member);
     }
 
-    public List<InterestedWebtoonResponse> getFavoriteWebtoon(Long memberId) {
-        Member member = memberRepository.findById(memberId)
-            .orElseThrow(() -> new MemberException(MemberExceptionType.MEMBER_NOT_FOUND));
+    public InterestedWebtoonSimpleResponse getFavoriteWebtoon(Long memberId, Long WebtoonId) {
 
-        List<InterestedWebtoon> favoriteWebtoons = interestedWebtoonRepository.findAllByMemberId(member);
+        InterestedWebtoon interestedWebtoon = interestedWebtoonRepository.findByWebtoonIdAndMemberId(
+                WebtoonId, memberId)
+            .orElseThrow(
+                () -> new MemberException(MemberExceptionType.INTERESTED_WEBTOON_NOT_FOUND));
+
+        return InterestedWebtoonSimpleResponse.from(interestedWebtoon);
+    }
+
+    public List<InterestedWebtoonResponse> getAllFavoriteWebtoon(Long memberId) {
+
+        List<InterestedWebtoon> favoriteWebtoons = interestedWebtoonRepository.findAllByMemberId(
+            memberId);
 
         return favoriteWebtoons.stream()
-                    .map(InterestedWebtoonResponse::from)
-                    .toList();
+            .map(interestedWebtoon -> {
+                Webtoon webtoon = interestedWebtoon.getWebtoon();
+                Member author = webtoon.getMember();
+
+                List<String> genres = webtoonGenreRepository.findByWebtoon(webtoon)
+                    .stream()
+                    .map(WebtoonGenre -> WebtoonGenre.getGenre().getName())
+                    .collect(Collectors.toList());
+
+                return InterestedWebtoonResponse.from(
+                    interestedWebtoon,
+                    author.getNickname(),
+                    webtoon.getEpisodeCount(),
+                    webtoon.getUpdatedAt(),
+                    genres
+                );
+            })
+            .toList();
     }
 
     public List<Member> getAllMembers() {
@@ -60,17 +92,24 @@ public class MemberService {
     }
 
     @Transactional
-    public void deleteFavoriteWebtoon(Long memberId, Long interestedWebtoonId) {
+    public void deleteFavoriteWebtoon(Long memberId, Long WebtoonId) {
         Member member = memberRepository.findById(memberId)
             .orElseThrow(() -> new MemberException(MemberExceptionType.MEMBER_NOT_FOUND));
 
-        InterestedWebtoon interestedWebtoon = interestedWebtoonRepository.findById(interestedWebtoonId)
-            .orElseThrow(() -> new MemberException(MemberExceptionType.INTERESTED_WEBTOON_NOT_FOUND));
+        InterestedWebtoon interestedWebtoon = interestedWebtoonRepository.findByWebtoonIdAndMemberId(
+                WebtoonId, memberId)
+            .orElseThrow(
+                () -> new MemberException(MemberExceptionType.INTERESTED_WEBTOON_NOT_FOUND));
 
-        if (!interestedWebtoon.getMember().equals(member)) {
+        if (!interestedWebtoon.getMember().getId().equals(memberId)) {
             throw new MemberException(MemberExceptionType.MEMBER_NOT_AUTHORIZED);
         }
 
         interestedWebtoonRepository.delete(interestedWebtoon);
+    }
+
+    @Transactional(readOnly = true)
+    public PageResDto<WorkResDto> getAllWorks(final Long memberId, final String status, final PageReqDto pageReqDto) {
+        return memberRepository.findAllWorkWithPage(memberId, status, pageReqDto);
     }
 }
